--- a/Task2/Task2/Presentation.csproj
+++ b/Task2/Task2/Presentation.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{01C9C2D9-A87D-4134-9191-70402055C184}</ProjectGuid>
+    <ProjectGuid>{B864CC28-2896-4FE3-AB7B-8EAB5521F1BC}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <RootNamespace>Presentation</RootNamespace>
     <AssemblyName>Presentation</AssemblyName>
-    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <WarningLevel>4</WarningLevel>
@@ -37,6 +37,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Data.Linq" />
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Core" />
@@ -55,36 +56,38 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Page Include="View\MainWindow.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </Page>
-    <Compile Include="App.xaml.cs">
-      <DependentUpon>App.xaml</DependentUpon>
-      <SubType>Code</SubType>
-    </Compile>
+    <Compile Include="Model\Catalog.cs" />
     <Compile Include="Model\Command\CommandAddUser.cs" />
-    <Compile Include="Model\Command\CommandBase.cs" />
     <Compile Include="Model\Command\CommandBorrow.cs" />
     <Compile Include="Model\Command\CommandCreateBook.cs" />
     <Compile Include="Model\Command\CommandDeleteBook.cs" />
-    <Compile Include="Model\Command\CommandIsAvailable.cs" />
+    <Compile Include="Model\Command\CommandDeleteUser.cs" />
+    <Compile Include="Model\Command\CommandEditBook.cs" />
+    <Compile Include="Model\Command\CommandEditUser.cs" />
+    <Compile Include="Model\Command\CommandIsAvailible.cs" />
     <Compile Include="Model\Command\CommandReturn.cs" />
+    <Compile Include="Model\MyDataLayer.cs" />
+    <Compile Include="Model\Event.cs" />
     <Compile Include="Model\MainWindowModel.cs" />
+    <Compile Include="Model\MyLibrary.cs" />
+    <Compile Include="Model\State.cs" />
+    <Compile Include="Model\User.cs" />
+    <Compile Include="Model\Command\CommandBase.cs" />
     <Compile Include="ViewModel\Base\ViewModelBase.cs" />
     <Compile Include="ViewModel\MainWindowViewModel.cs" />
     <Compile Include="View\MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="App.xaml.cs">
+      <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="View\MainWindow.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Model\Catalog.cs" />
-    <Compile Include="Model\Event.cs" />
-    <Compile Include="Model\MyDataLayer.cs" />
-    <Compile Include="Model\MyLibrary.cs" />
-    <Compile Include="Model\State.cs" />
-    <Compile Include="Model\User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
@@ -110,16 +113,16 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup />
   <ItemGroup>
-    <ProjectReference Include="..\Task2\Data\Data.csproj">
-      <Project>{897d2a21-7fcb-49f5-9814-772d59f6cf32}</Project>
+    <ProjectReference Include="..\Data\Data.csproj">
+      <Project>{73930886-ec19-4ef5-965e-d9e1438ef187}</Project>
       <Name>Data</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Task2\Service\Service.csproj">
-      <Project>{dc2cdd98-7443-4710-8b0c-e9745ab7f07a}</Project>
-      <Name>Service</Name>
+    <ProjectReference Include="..\Services\Services.csproj">
+      <Project>{8763e16e-2e86-42b7-a9ec-270d49bcc1f9}</Project>
+      <Name>Services</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
