--- a/Task2/Task2/Services/Services.csproj
+++ b/Task2/Task2/Services/Services.csproj
@@ -44,6 +44,7 @@
   <ItemGroup>
     <Compile Include="Logic\BusinessLogicAPI.cs" />
     <Compile Include="Logic\DataService.cs" />
+    <Compile Include="MyDataLayer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
