--- a/Task2/Task2/Data/app.config
+++ b/Task2/Task2/Data/app.config
@@ -4,7 +4,7 @@
     </configSections>
     <connectionStrings>
         <add name="Data.Properties.Settings.databaseConnectionString"
-            connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\Sql\database.mdf;Integrated Security=True;Connect Timeout=30"
+            connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\Sql\database.mdf;Integrated Security=True"
             providerName="System.Data.SqlClient" />
         <add name="Data.Properties.Settings.databaseConnectionString1"
             connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\database.mdf;Integrated Security=True;Connect Timeout=30"
