--- a/Task2/Task2/Task2/Presentation.csproj
+++ b/Task2/Task2/Task2/Presentation.csproj
@@ -57,22 +57,23 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="Model\Catalog.cs" />
-    <Compile Include="Model\Command\CommandAddUser.cs" />
-    <Compile Include="Model\Command\CommandBorrow.cs" />
-    <Compile Include="Model\Command\CommandCreateBook.cs" />
-    <Compile Include="Model\Command\CommandDeleteBook.cs" />
-    <Compile Include="Model\Command\CommandDeleteUser.cs" />
-    <Compile Include="Model\Command\CommandEditBook.cs" />
-    <Compile Include="Model\Command\CommandEditUser.cs" />
-    <Compile Include="Model\Command\CommandIsAvailible.cs" />
-    <Compile Include="Model\Command\CommandReturn.cs" />
     <Compile Include="Model\Event.cs" />
     <Compile Include="Model\MainWindowModel.cs" />
     <Compile Include="Model\MyLibrary.cs" />
+    <Compile Include="Model\MyLibraryAbstract.cs" />
     <Compile Include="Model\State.cs" />
     <Compile Include="Model\User.cs" />
-    <Compile Include="Model\Command\CommandBase.cs" />
     <Compile Include="ViewModel\Base\ViewModelBase.cs" />
+    <Compile Include="ViewModel\Command1\CommandAddUser.cs" />
+    <Compile Include="ViewModel\Command1\CommandBase.cs" />
+    <Compile Include="ViewModel\Command1\CommandBorrow.cs" />
+    <Compile Include="ViewModel\Command1\CommandCreateBook.cs" />
+    <Compile Include="ViewModel\Command1\CommandDeleteBook.cs" />
+    <Compile Include="ViewModel\Command1\CommandDeleteUser.cs" />
+    <Compile Include="ViewModel\Command1\CommandEditBook.cs" />
+    <Compile Include="ViewModel\Command1\CommandEditUser.cs" />
+    <Compile Include="ViewModel\Command1\CommandIsAvailible.cs" />
+    <Compile Include="ViewModel\Command1\CommandReturn.cs" />
     <Compile Include="ViewModel\MainWindowViewModel.cs" />
     <Compile Include="View\MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
