--- a/Task2/Task2/TestTask2/TestTask2.csproj
+++ b/Task2/Task2/TestTask2/TestTask2.csproj
@@ -49,6 +49,7 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="MyLibrary.cs" />
     <Compile Include="ViewModelTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
